<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".ui.DetailUserActivity">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="Name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/user_name"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        tools:text="Muhammad Hisyam Zayd" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_user_name"
        app:layout_constraintStart_toStartOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/user_email"
        app:layout_constraintStart_toStartOf="@id/user_email"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        tools:text="hisyamzayd@gmail.com" />

    <TextView
        android:id="@+id/user_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Address"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_user_email"
        app:layout_constraintStart_toStartOf="@id/tv_user_email"
        app:layout_constraintTop_toBottomOf="@id/tv_user_email" />

    <TextView
        android:id="@+id/tv_user_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/user_address"
        app:layout_constraintStart_toStartOf="@id/user_address"
        app:layout_constraintTop_toBottomOf="@id/user_address"
        tools:text="Street : Villa Taman Sengkaling\nSuite : Suite 1\nCity : Malang\nZipcode : 65151" />

    <TextView
        android:id="@+id/user_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Company"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_user_address"
        app:layout_constraintStart_toStartOf="@id/tv_user_address"
        app:layout_constraintTop_toBottomOf="@id/tv_user_address" />

    <TextView
        android:id="@+id/tv_user_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/user_company"
        app:layout_constraintStart_toStartOf="@id/user_company"
        app:layout_constraintTop_toBottomOf="@id/user_company"
        tools:text="Kumparan" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:letterSpacing="0.4"
        android:text="ALBUM"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_company" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_album_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album"
        tools:listitem="@layout/rv_item_album_list" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

</androidx.constraintlayout.widget.ConstraintLayout>